--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.2|>=8.1",
         "symfony/form": "~3.0|^4.0|^5.0|^6.0",
         "symfony/dependency-injection": "~3.0|^4.0|^5.0|^6.0",
         "symfony/config": "~3.0|^4.0|^5.0|^6.0",
